grindstone-stats/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grindstone-stats
  labels:
    app: grindstone-stats
    component: server
spec:
  selector:
    matchLabels:
      app: grindstone-stats
      component: server
  template:
    metadata:
      labels:
        app: grindstone-stats
        component: server
    spec:
      containers:
      - name: grindstone-stats
        image: ghcr.io/jemand771/grindstone-stats:sha-2fe6ff2
        resources:
          limits:
            memory: "128Mi"
            cpu: "50m"
        ports:
        - containerPort: 80
          name: web
