grindstone-stats/redis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: grindstone-stats
  labels:
    app: grindstone-stats
    component: redis
spec:
  selector:
    matchLabels:
      app: grindstone-stats
      component: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: grindstone-stats
        component: redis
    spec:
      containers:
        - name: redis
          image: redis
          args:
            - --appendonly
            - "yes"
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: redis
