grindstone-stats/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: grindstone-stats
spec:
  selector:
    app: grindstone-stats
    component: redis
  ports:
    - port: 6379
      name: redis
      targetPort: redis
