grindstone-stats/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: grindstone-stats
spec:
  selector:
    app: grindstone-stats
    component: server
  ports:
    - port: 80
      name: web
      targetPort: web
