grindstone-stats/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server
  namespace: grindstone-stats
spec:
  rules:
    - host: grindstone-stats.jemand771.net
      http:
        paths:
          - backend:
              service:
                name: server
                port:
                  name: web
            pathType: Prefix
            path: /
